--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2",
-     "pg": "^8.9.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0"
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0"
   }
 }
